[package]

	name = "aoc"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code"
	repository = "https://github.com/jamespharaoh/advent-of-code"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "common" }
	aoc-2015 = { path = "2015" }
	aoc-2016 = { path = "2016" }
	aoc-2017 = { path = "2017" }
	aoc-2018 = { path = "2018" }
	aoc-2019 = { path = "2019" }
	aoc-2020 = { path = "2020" }
	aoc-2021 = { path = "2021" }

[profile.coverage]

	inherits = "dev"

[profile.dev]

	opt-level = 2
	codegen-units = 256

[profile.quick]

	inherits = "test"
	opt-level = 3
	codegen-units = 16

[profile.flamegraph]

	inherits = "release"
	debug = true

[profile.release]

	codegen-units = 1
	package.clap = { codegen-units = 16 }

[profile.release-lto]

	inherits = "release"
	lto = true

[profile.test]

	package.aoc-2015-day-04 = { opt-level = 2 }
	package.aoc-2016-day-14 = { opt-level = 2 }
	package.aoc-md5 = { opt-level = 2 }
	package.clap = { codegen-units = 256 }

[workspace]

	members = [
		"misc/codegen",
	]
