[package]

	name = "aoc"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code"
	repository = "https://github.com/jamespharaoh/advent-of-code"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "common" }
	aoc-2015 = { path = "2015" }
	aoc-2016 = { path = "2016" }
	aoc-2017 = { path = "2017" }
	aoc-2018 = { path = "2018" }
	aoc-2019 = { path = "2019" }
	aoc-2020 = { path = "2020" }
	aoc-2021 = { path = "2021" }
	aoc-2022 = { path = "2022" }
	aoc-2023 = { path = "2023" }

[profile.coverage]

	inherits = "test"

[profile.dev]

	opt-level = 0
	codegen-units = 16
	rpath = true

[profile.flamegraph]

	inherits = "release-lto"
	debug = true

[profile.kcov]

	inherits = "test"
	opt-level = 0

[profile.quick]

	inherits = "test"
	opt-level = 2
	codegen-units = 4

[profile.release]

	codegen-units = 1
	rpath = true

[profile.release-lto]

	inherits = "release"
	lto = "fat"

[profile.test]

	opt-level = 1
	package.aoc-2015-day-04 = { opt-level = 2 }
	package.aoc-2016-day-14 = { opt-level = 2 }
	package.aoc-2018-cpu = { opt-level = 3 }
	package.aoc-2018-day-21 = { opt-level = 3 }
	package.aoc-md5 = { opt-level = 3 }
	rpath = true

[workspace]

	members = [
		"misc/codegen",
	]
