[package]

	name = "aoc-2015"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2015-day-01 = { path = "day-01" }
	aoc-2015-day-02 = { path = "day-02" }
	aoc-2015-day-03 = { path = "day-03" }
	aoc-2015-day-04 = { path = "day-04" }
	aoc-2015-day-05 = { path = "day-05" }
	aoc-2015-day-06 = { path = "day-06" }
	aoc-2015-day-07 = { path = "day-07" }
	aoc-2015-day-08 = { path = "day-08" }
	aoc-2015-day-09 = { path = "day-09" }
	aoc-2015-day-10 = { path = "day-10" }
	aoc-2015-day-11 = { path = "day-11" }
	aoc-2015-day-12 = { path = "day-12" }
	aoc-2015-day-13 = { path = "day-13" }
	aoc-2015-day-14 = { path = "day-14" }
	aoc-2015-day-15 = { path = "day-15" }
	aoc-2015-day-16 = { path = "day-16" }
	aoc-2015-day-17 = { path = "day-17" }

[profile.coverage]

	inherits = "dev"

[profile.flamegraph]

	inherits = "release"
	debug = true

[profile.release-lto]

	inherits = "release"
	lto = true

[profile.dev.package.aoc-2015-day-04]

	# includes an MD5 implementation which runs very slowly without optimisation
	opt-level = 2

[workspace]

	members = [
		"day-01", "day-02", "day-03", "day-04", "day-05", "day-06", "day-07", "day-08", "day-09",
		"day-10", "day-11", "day-12", "day-13", "day-14", "day-15", "day-16", "day-17",
	]
