[package]

	name = "aoc-2016"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2016"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2016"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2016-day-01 = { path = "day-01" }
	aoc-2016-day-02 = { path = "day-02" }
	aoc-2016-day-03 = { path = "day-03" }
	aoc-2016-day-04 = { path = "day-04" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }

[lib]

	path = "src/lib.rs"
