[package]

	name = "aoc-2016"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2016"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2016"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2016-day-01 = { path = "day-01" }
	aoc-2016-day-02 = { path = "day-02" }
	aoc-2016-day-03 = { path = "day-03" }
	aoc-2016-day-04 = { path = "day-04" }
	aoc-2016-day-05 = { path = "day-05" }
	aoc-2016-day-06 = { path = "day-06" }
	aoc-2016-day-07 = { path = "day-07" }
	aoc-2016-day-08 = { path = "day-08" }
	aoc-2016-day-09 = { path = "day-09" }
	aoc-2016-day-10 = { path = "day-10" }
	aoc-2016-day-11 = { path = "day-11" }
	aoc-2016-day-12 = { path = "day-12" }
	aoc-2016-day-13 = { path = "day-13" }
	aoc-2016-day-14 = { path = "day-14" }
	aoc-2016-day-15 = { path = "day-15" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }

[lib]

	path = "src/lib.rs"
