[package]

	name = "aoc-2017"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2017"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2017"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2017-day-01 = { path = "day-01" }
	aoc-2017-day-02 = { path = "day-02" }
	aoc-2017-day-03 = { path = "day-03" }
	aoc-2017-day-04 = { path = "day-04" }
	aoc-2017-day-05 = { path = "day-05" }
	aoc-2017-day-06 = { path = "day-06" }
	aoc-2017-day-07 = { path = "day-07" }
	aoc-2017-day-08 = { path = "day-08" }
	aoc-2017-day-09 = { path = "day-09" }
	aoc-2017-day-10 = { path = "day-10" }
	aoc-2017-day-11 = { path = "day-11" }
	aoc-2017-day-12 = { path = "day-12" }
	aoc-2017-day-13 = { path = "day-13" }
	aoc-2017-day-14 = { path = "day-14" }
	aoc-2017-day-15 = { path = "day-15" }
	aoc-2017-day-16 = { path = "day-16" }
	aoc-2017-day-17 = { path = "day-17" }
	aoc-2017-day-18 = { path = "day-18" }
	aoc-2017-day-19 = { path = "day-19" }
	aoc-2017-day-20 = { path = "day-20" }
	aoc-2017-day-21 = { path = "day-21" }
	aoc-2017-day-22 = { path = "day-22" }
	aoc-2017-day-23 = { path = "day-23" }
	aoc-2017-day-24 = { path = "day-24" }
	aoc-2017-day-25 = { path = "day-25" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }

[lib]

	path = "src/lib.rs"
