[workspace]

members = [
	"aoc-2018-day-1-part-1",
	"aoc-2018-day-1-part-2",
	"aoc-2018-day-2-part-1",
	"aoc-2018-day-2-part-2",
	"aoc-2018-day-3-part-1",
	"aoc-2018-day-3-part-2",
	"aoc-2018-day-4-part-1",
	"aoc-2018-day-4-part-2",
	"aoc-2018-day-5-part-1",
	"aoc-2018-day-5-part-2",
	"aoc-2018-day-6-part-1",
	"aoc-2018-day-6-part-2",
	"aoc-2018-day-7-part-1",
	"aoc-2018-day-7-part-2",
	"aoc-2018-day-8-part-1",
	"aoc-2018-shared",
]
