[package]

	name = "aoc-2018"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2018"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2018"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2018-day-01 = { path = "day-01" }
	aoc-2018-day-02 = { path = "day-02" }
	aoc-2018-day-03 = { path = "day-03" }
	aoc-2018-day-04 = { path = "day-04" }
	aoc-2018-day-05 = { path = "day-05" }
	aoc-2018-day-06 = { path = "day-06" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }

[lib]

	path = "src/lib.rs"
