[package]

	name = "aoc-2021"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2021"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2021"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../aoc-common" }

	aoc-2021-day-01 = { path = "day-01" }
	aoc-2021-day-02 = { path = "day-02" }
	aoc-2021-day-03 = { path = "day-03" }
	aoc-2021-day-04 = { path = "day-04" }
	aoc-2021-day-05 = { path = "day-05" }
	aoc-2021-day-06 = { path = "day-06" }
	aoc-2021-day-07 = { path = "day-07" }
	aoc-2021-day-08 = { path = "day-08" }
	aoc-2021-day-09 = { path = "day-09" }
	aoc-2021-day-10 = { path = "day-10" }
	aoc-2021-day-11 = { path = "day-11" }
	aoc-2021-day-12 = { path = "day-12" }
	aoc-2021-day-13 = { path = "day-13" }
	aoc-2021-day-14 = { path = "day-14" }
	aoc-2021-day-15 = { path = "day-15" }
	aoc-2021-day-16 = { path = "day-16" }
	aoc-2021-day-17 = { path = "day-17" }
	aoc-2021-day-18 = { path = "day-18" }
	aoc-2021-day-19 = { path = "day-19" }
	aoc-2021-day-20 = { path = "day-20" }
	aoc-2021-day-21 = { path = "day-21" }
	aoc-2021-day-22 = { path = "day-22" }
	aoc-2021-day-23 = { path = "day-23" }
	aoc-2021-day-24 = { path = "day-24" }
	aoc-2021-day-25 = { path = "day-25" }

[profile.flamegraph]

	inherits = "release"
	debug = true

[profile.release-lto]

	inherits = "release"
	lto = true

[workspace]

	members = [
		"day-01", "day-02", "day-03", "day-04", "day-05", "day-06", "day-07", "day-08", "day-09",
		"day-10", "day-11", "day-12", "day-13", "day-14", "day-15", "day-16", "day-17", "day-18",
		"day-19", "day-20", "day-21", "day-22", "day-23", "day-24", "day-25",
	]
