[package]

	name = "aoc-2022"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2022"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2022"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2022-day-01 = { path = "day-01" }
	aoc-2022-day-02 = { path = "day-02" }
	aoc-2022-day-03 = { path = "day-03" }
	aoc-2022-day-04 = { path = "day-04" }
	aoc-2022-day-05 = { path = "day-05" }
	aoc-2022-day-06 = { path = "day-06" }
	aoc-2022-day-07 = { path = "day-07" }
	aoc-2022-day-08 = { path = "day-08" }
	aoc-2022-day-09 = { path = "day-09" }
	aoc-2022-day-10 = { path = "day-10" }
	aoc-2022-day-11 = { path = "day-11" }
	aoc-2022-day-12 = { path = "day-12" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }
