[package]

	name = "aoc-2023"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2023"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2023"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2023-day-01 = { path = "day-01" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }
