[package]

	name = "aoc-2023"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2023"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2023"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../common" }

	aoc-2023-day-01 = { path = "day-01" }
	aoc-2023-day-02 = { path = "day-02" }
	aoc-2023-day-03 = { path = "day-03" }
	aoc-2023-day-04 = { path = "day-04" }
	aoc-2023-day-05 = { path = "day-05" }
	aoc-2023-day-06 = { path = "day-06" }
	aoc-2023-day-07 = { path = "day-07" }
	aoc-2023-day-08 = { path = "day-08" }
	aoc-2023-day-09 = { path = "day-09" }
	aoc-2023-day-10 = { path = "day-10" }
	aoc-2023-day-11 = { path = "day-11" }
	aoc-2023-day-12 = { path = "day-12" }
	aoc-2023-day-13 = { path = "day-13" }
	aoc-2023-day-14 = { path = "day-14" }
	aoc-2023-day-15 = { path = "day-15" }
	aoc-2023-day-16 = { path = "day-16" }
	aoc-2023-day-17 = { path = "day-17" }
	aoc-2023-day-18 = { path = "day-18" }
	aoc-2023-day-19 = { path = "day-19" }
	aoc-2023-day-20 = { path = "day-20" }

[build-dependencies]

	aoc-codegen = { path = "../misc/codegen" }
