[package]

	name = "aoc-common"
	version = "0.1.0"
	edition = "2021"

[dependencies]

	arrayvec = "0.7"
	clap = { version = "3.2", features = [ "derive" ] }
	itertools = "0.10"

[target.'cfg(fuzzing)'.dependencies]

	arbitrary = { version = "1.1", features = [ "derive" ] }

[lib]

	crate-type = [ "rlib", "dylib" ]
