[package]

	name = "aoc-common"
	version = "0.1.0"
	edition = "2021"

[dependencies]

	aoc-args = { path = "args" }
	aoc-checked = { path = "checked" }
	aoc-inpstr = { path = "inpstr" }
	aoc-misc = { path = "misc" }
	aoc-nums = { path = "nums" }
	aoc-parser = { path = "parser" }
	aoc-puzzle = { path = "puzzle" }
	itertools = "*"

[lib]

	crate-type = [ "rlib", "dylib" ]
