[package]

	name = "aoc-2015-day-02"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 2: I Was Told There Would Be No Math"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-02"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[target.'cfg(fuzzing)'.dependencies]

	arbitrary = { version = "1.1", features = [ "derive" ] }
