[package]

	name = "aoc-2015-day-03"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 3: Perfectly Spherical Houses in a Vacuum"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-03"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[target.'cfg(fuzzing)'.dependencies]

	arbitrary = { version = "1.1", features = [ "derive" ] }

[lib]

	crate-type = [ "rlib", "dylib" ]

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }

[[bin]]

	name="aoc-2015-day-03"
	test = false
	bench = false
