[package]

	name = "aoc-2015-day-05"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 5: Doesn't He Have Intern-Elves For This?"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-05"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[lib]

	path = "lib.rs"
	doctest = false
	crate-type = [ "rlib", "dylib" ]

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }

[[bin]]

	name = "aoc-2015-day-05"
	path = "main.rs"
	test = false
	doctest = false
	bench = false
