[package]

	name = "aoc-2015-day-08"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 8: Matchsticks"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-08"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }
