[package]

	name = "aoc-2015-day-09"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 9: All in a Single Night"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-09"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }
	aoc-search = { path = "../../common/search" }

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }

[lib]

	path = "lib.rs"
	doctest = false
	crate-type = [ "rlib", "dylib" ]

[[bin]]

	name = "aoc-2015-day-09"
	path = "main.rs"
	test = false
	doctest = false
	bench = false
