[package]

	name = "aoc-2015-day-12"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 12: JSAbacusFramework.io"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-12"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[lib]

	crate-type = [ "rlib", "dylib" ]

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }

[[bin]]

	name="aoc-2015-day-12"
	test = false
	bench = false
