[package]

	name = "aoc-2015-day-15"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 15: Science for Hungry People"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-15"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[lib]

	doctest = false
	crate-type = [ "rlib", "dylib" ]

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }

[[bin]]

	name = "aoc-2015-day-15"
	test = false
	doctest = false
	bench = false
