[package]

	name = "aoc-2015-day-16"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 16: Aunt Sue"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-16"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[lib]

	crate-type = [ "rlib", "dylib" ]

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }
